--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -36,14 +36,20 @@
                         <img src="<?= $this->basePath('img/zf-logo-mark.svg') ?>" height="28" alt="Zend Framework <?= \Application\Module::VERSION ?>"/>&nbsp;Skeleton Application
                     </a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?= $this->url('home') ?>">Home</a></li>
-                    </ul>
+                <div class="collapse navbar-collapse">                   
+                    <?= $this->navigation('navigation')
+                    ->menu()
+                    ->setMinDepth(0)
+                    ->setMaxDepth(0)
+                    ->setUlClass('nav navbar-nav') ?>
                 </div>
             </div>
         </nav>
         <div class="container">
+            <?= $this->navigation('navigation')
+                ->breadcrumbs()
+                ->setMinDepth(0)
+                ->setPartial('partial/breadcrumb') ?>
             <?= $this->content ?>
             <hr>
             <footer>
